--- a/index.html
+++ b/index.html
@@ -13,16 +13,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="container clearfix">
+        <nav>
+            <ul class="left">
+                <li>
+                    <img class="logo" src="img/logo-small.png" alt="logo Dropbox">
+                </li>
+                <li><a href="#!">Perchè Dropbox?</a></li>
+                <li><a href="#!">Funzioni</a></li>
+                <li><a href="#!">Piani e prezzi</a></li>
+            </ul>
 
-    <header>
-        <div>
-            <li>
-                <img src="img/logo-small.png" alt="logo Dropbox">
-            </li>
-            <li><a href="#!">Perchè Dropbox?</a></li>
-            <li><a href=""></a>Funzioni</li>
-            <li><a href=""></a>Piani e prezzi</li>
-        </div>
+            <ul class="right">
+                <li><a href="#!">Supporto</a></li>
+                <li><a href="#!">Contatta l'ufficio vendite</a></li>
+                <li><a href="#!">Accedi</a></li>
+                <li><a class="bluBtn" href="#!">Inizia</a></li>
+            </ul>
+         </nav>
     </header>
     
 </body>
