--- a/index.html
+++ b/index.html
@@ -31,7 +31,26 @@
                 <li><a class="bluBtn" href="#!">Inizia</a></li>
             </ul>
          </nav>
+
     </header>
+        <main class="hero">
+
+            <div class="container">
+
+                <h1 class="pTop">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
     
+                <div class="clearfix rel">
+                    <div class="info left">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Buisness è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <a href="#!" class="bluBtn">Inizia la tua prova gratuita</a>
+                        <div>annulla in qualsiasi momento</div>
+                        <div></div>
+                    </div>
+                    <img class="left" src="img/jumbo.png" alt="jumbo">
+                </div>
+
+            </div>
+
+        </main>
 </body>
 </html>
