--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <header class="container clearfix">
@@ -33,26 +36,25 @@
          </nav>
 
     </header>
-        <main class="hero">
+    <main class="hero rel clearfix">
 
-            <div class="container">
+         <div class="container">
 
-                <h1 class="pTop">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <h1 class="pTop">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
     
-                <div class="clearfix rel">
-                    <div class="info left">
-                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Buisness è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                        <a href="#!" class="bluBtn">Inizia la tua prova gratuita</a>
-                        <div>Annulla in qualsiasi momento</div>
-                        <div></div>
-                    </div>
-                    <img class="left" src="img/jumbo.png" alt="jumbo">
+                <div class="info left">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Buisness è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <a href="#!" class="bluBtn mrgTop-2">Inizia la tua prova gratuita</a>
+                    <div>Annulla in qualsiasi momento</div>
+                    <a href="#section1" class="down mrgTop-2"><i class="fas fa-arrow-down"></i></a>
                 </div>
-            </div>
-        </main>
 
-        <section class="container">
+                <img class="transl" src="img/jumbo.png" alt="jumbo">
+        </div>
+    </main>
+
+    <section id="section1" class="container">
             
-        </section>
+    </section>
 </body>
 </html>
