inizio seconda section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <header class="container clearfix">
+    <header class="clearfix">
         <nav>
             <ul class="left">
                 <li>
@@ -54,6 +54,8 @@
     </main>
 
     <section id="section1" class="container">
+        
+        <h2>Trova il piano Dropbox Buisness che fa per te</h2>
             
     </section>
 </body>
