--- a/index.html
+++ b/index.html
@@ -69,16 +69,22 @@
             </div>
         </div>
 
-        <div class="left">
+        <div class="left table">
 
             <span class="profile">  
                 <i class="fas fa-user-alt"></i>
                 Singolo
             </span>
 
+            <div class="pad-data txt-left container">
+                <h3>Professional</h3>
+                <h4>19,99 €</h4>
+                <h5>/mese</h5>
+
+            </div>
+
             
 
-            <div>ciao ciao ciao</div>
 
 
         </div>
