--- a/index.html
+++ b/index.html
@@ -76,12 +76,36 @@
                 Singolo
             </span>
 
-            <div class="pad-data txt-left container">
-                <h3>Professional</h3>
-                <h4>19,99 €</h4>
-                <h5>/mese</h5>
+            <div class="subscription pad-data txt-left container">
 
+                <div class="heading">
+                    <h3>Professional</h3>
+                    <h4>19,99 €</h4>
+                    <h5>/mese</h5>
+                </div>
+
+                <ul>
+                    <li>
+                        <img src="img/icons/user-alt-void.svg" alt="">
+                        <span class="inblock">1 utente</span> 
+                    </li>
+                    <li>
+                        <img src="img/icons/folder-void.svg" alt="">
+                        <span class="inblock">
+                            3 TB di spazio di archiviazione sicura
+                        </span>
+                    </li>
+                    <li>
+                        <img src="img/icons/pencil-alt.svg" alt="">
+                        <span class="inblock">
+                            Funzioni di produttività premium e condivisione file semplice e sicura
+                        </span>
+                    </li>
+                </ul>
+
+                <a href="#1" class="bluBtn">Prova gratis per 30 giorni</a>
             </div>
+
 
             
 
