--- a/index.html
+++ b/index.html
@@ -260,12 +260,22 @@
                 </div>
             </div>
 
-            <div class="left bigTable">
+            <div class="left subscription bigTable clearfix">
 
                 <span class="profile">  
                     <i class="far fa-building"></i>
                     Team
                 </span>
+
+                <div class="heading txt-left container">
+
+                    <h3>Enterprise</h3>
+                    <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                </div>
+
+                <span class="left container inblock">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</span>
+                
+                <a href="#!" class="bluBtn left">Contatta l'ufficio vendite</a>
             </div>
         </div>
 
