--- a/index.html
+++ b/index.html
@@ -410,9 +410,35 @@
         
     </section>
 
-    <section id="section5" class="container clearfix">
-        <h2 class="left">Porta Dropbox Buisness nella tua azienda.</h2>
-        <a href="#!" class="bluBtn right">Inizia la tua prova gratuita</a>
+    <section id="section5">
+
+        <div class="container middleCont clearfix">
+            <h2 class="left">Porta Dropbox Buisness nella tua azienda.</h2>
+            <a href="#!" class="bluBtn right">Inizia la tua prova gratuita</a>
+        </div>
+    </section>
+
+    <section id="section6" class="container">
+        <h2 class="bigUnder">Domande frequenti</h2>
+
+        <ul>
+            <li class="clearfix">
+                <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
+                <i class="fas fa-chevron-down right"></i>
+            </li>
+            <li class="clearfix">
+                <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
+                <i class="fas fa-chevron-down right"></i>
+            </li>
+            <li class="clearfix">
+                <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
+                <i class="fas fa-chevron-down right"></i>
+            </li>
+            <li class="clearfix">
+                <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
+                <i class="fas fa-chevron-down right"></i>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
