sistemare icone piani e bottone partner + bonus

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         <nav>
             <ul class="left">
                 <li>
-                    <img class="logo" src="img/logo-small.png" alt="logo Dropbox">
+                    <a href="#home">
+                        <img class="logo" src="img/logo-small.png" alt="logo Dropbox">
+                    </a>
                 </li>
-                <li><a href="#!">Perchè Dropbox?</a></li>
+                <li>
+                    <a href="#!">Perchè Dropbox?</a>
+                </li>
                 <li><a href="#!">Funzioni</a></li>
                 <li><a href="#!">Piani e prezzi</a></li>
             </ul>
@@ -36,7 +40,7 @@
          </nav>
 
     </header>
-    <main class="hero clearfix">
+    <main id="home" class="hero clearfix">
 
          <div class="container clearfix">
 
