--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="left table">
 
                 <span class="profile">  
-                    <i class="fas fa-user-alt"></i>
+                    <i class="far fa-user"></i>
                     Singolo
                 </span>
 
@@ -150,21 +150,21 @@
             <div class="left table">
 
                 <span class="profile">  
-                    <i class="fas fa-user-alt"></i>
-                    Singolo
+                    <i class="far fa-building"></i>
+                    Team
                 </span>
 
                 <div class="subscription pad-data txt-left container">
 
                     <div class="heading">
-                        <h3>Professional</h3>
+                        <h3>Standard</h3>
                         <h4>19,99 €</h4>
                         <h5>/mese</h5>
                     </div>
 
                     <ul>
                         <li>
-                            <img src="img/icons/user-alt-void.svg" alt="">
+                            <img src="img/icons/user-plus.svg" alt="">
                             <span class="inblock">1 utente</span> 
                         </li>
                         <li>
@@ -222,21 +222,21 @@
             <div class="left table">
 
                 <span class="profile">  
-                    <i class="fas fa-user-alt"></i>
-                    Singolo
+                    <i class="far fa-building"></i>
+                    Team
                 </span>
 
                 <div class="subscription pad-data txt-left container">
 
                     <div class="heading">
-                        <h3>Professional</h3>
+                        <h3>Advanced</h3>
                         <h4>19,99 €</h4>
                         <h5>/mese</h5>
                     </div>
 
                     <ul>
                         <li>
-                            <img src="img/icons/user-alt-void.svg" alt="">
+                            <img src="img/icons/user-plus.svg" alt="">
                             <span class="inblock">1 utente</span> 
                         </li>
                         <li>
