menu a tendina bonus

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="clearfix">
         <nav>
-            <ul class="left">
+            <ul class="left min-600">
                 <li>
                     <a href="#home">
                         <img class="logo" src="img/logo-small.png" alt="logo Dropbox">
@@ -26,20 +26,60 @@
                 </li>
                 <li>
                     <a href="#!">Perchè Dropbox?</a>
+                    <ul>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                    </ul>
                 </li>
-                <li><a href="#!">Funzioni</a></li>
-                <li><a href="#!">Piani e prezzi</a></li>
+                <li>
+                    <a href="#!">Funzioni</a>
+                    <ul>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#!">Piani e prezzi</a>
+                    <ul>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                    </ul>
+                </li>
             </ul>
 
-            <ul class="right">
-                <li><a href="#!">Supporto</a></li>
-                <li><a href="#!">Contatta l'ufficio vendite</a></li>
-                <li><a href="#!">Accedi</a></li>
+            <ul class="right min-600">
+                <li>
+                    <a href="#!">Supporto</a>
+                    <ul>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#!">Contatta l'ufficio vendite</a>
+                    <ul>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#!">Accedi</a>
+                    <ul>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                        <li><a href="#!">Assumimi Dropbox</a></li>
+                    </ul>
+                </li>
                 <li><a class="bluBtn" href="#!">Inizia</a></li>
             </ul>
          </nav>
-
     </header>
+
     <main id="home" class="hero clearfix">
 
          <div class="container clearfix">
