completo con bonus

--- a/index.html
+++ b/index.html
@@ -69,11 +69,6 @@
                 </li>
                 <li>
                     <a href="#!">Accedi</a>
-                    <ul>
-                        <li><a href="#!">Assumimi Dropbox</a></li>
-                        <li><a href="#!">Assumimi Dropbox</a></li>
-                        <li><a href="#!">Assumimi Dropbox</a></li>
-                    </ul>
                 </li>
                 <li><a class="bluBtn" href="#!">Inizia</a></li>
             </ul>
@@ -475,18 +470,34 @@
             <li class="clearfix">
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
+
+                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
+                Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
             <li class="clearfix">
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
+
+                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                    Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
+                    Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
             <li class="clearfix">
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
+
+                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                    Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
+                    Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
             <li class="clearfix">
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
+
+                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                    Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
+                    Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
         </ul>
     </section>
