--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
 
-                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                <p class="left mrgTop-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
                 Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
                 Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
@@ -479,7 +479,7 @@
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
 
-                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                <p class="left mrgTop-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
                     Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
                     Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
@@ -487,7 +487,7 @@
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
 
-                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                <p class="left mrgTop-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
                     Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
                     Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
@@ -495,7 +495,7 @@
                 <h3 class="left">Qual è la differenza tra Dropbox Buisness Standard e Dropbox Buisness Advanced?</h3>
                 <i class="fas fa-chevron-down right"></i>
 
-                <p class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
+                <p class="left mrgTop-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae officia repellat consequatur rerum quibusdam cupiditate! Ad, laboriosam quam? Culpa esse veniam quasi maxime praesentium officia natus et veritatis libero nesciunt.
                     Tenetur quia at minima commodi provident iure, dolores aut aperiam rem molestiae reiciendis! Ducimus delectus repellat saepe, magni minima magnam laborum. Facere harum adipisci dolores officia commodi repellat aperiam fugit.
                     Eum possimus numquam consectetur, quisquam quia ea labore. Explicabo beatae id tempore officia veritatis dolorum sit corporis! Veniam magnam, accusantium, iusto laboriosam quas voluptas, tempora non deserunt provident earum voluptatibus.</p>
             </li>
