--- a/revisione css/index.html
+++ b/revisione css/index.html
@@ -429,7 +429,7 @@
                 </div>
             </div>
     
-            <div class="bigSqr dirt left">
+            <div class="txt-Sqr dirt left">
                 <img src="img/designit.svg" alt="">
                 <hr>
                 <p class="mrgTop-2">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
