codice ripulito e riordinato

--- a/revisione css/index.html
+++ b/revisione css/index.html
@@ -326,7 +326,7 @@
                 </div>
             </div>
 
-            <div class="left subscription bigTable clearfix rel min-485">
+            <div class="left subscription bigTable clearfix min-485">
 
                 <span class="profile">  
                     <i class="far fa-building"></i>
